--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 22
         versionCode 4
         versionName "1.0-final"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -56,4 +57,6 @@ dependencies {
         transitive = false
     }
     */
+
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
 }
